# moneysnap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  agent.py  app.py  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
scripts/: check_banks.py  check_uuids.sh  debug_api.py  debug_db.py
src/finapp/: agent.py  config.py  db.py  notifier.py  rules.example.py  rules.py
src/finapp/banking/: fetch_accounts.py  fetch_transactions.py  fetcher.py
src/finapp/investments/: etf_catalog.py  tr_fetcher.py
