[project]
name = "finance-app"
version = "0.1.0"
description = "Personal finance dashboard with Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjwt==2.12.1",
    "cryptography==46.0.5",
    "requests==2.32.5",
    "streamlit==1.55.0",
    "pandas==2.3.3",
    "plotly==6.6.0",
    "anthropic==0.85.0",
    "yfinance==1.2.0",
    "pytr",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finapp"]

[tool.uv.sources]
pytr = { git = "https://github.com/RealCLanger/pytr.git" }
